--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -7,6 +7,7 @@ previously assigned minion towards the Defender rule.
 - "Mithril Mine" now correctly allows to play Shadow weapon for removing (1).
 - "Terrible and Evil" should be now wounding minions correctly.
 - "Linnar" should allow to heal characters, only if a fierce skirmish is won.
+- "Morgul Blade" should now correctly allow to transfer Blade Tip from discard.
 
 <b>21 Nov. 2011</b>
 - "Fifth Level" has now a Fortification keyword.
