- "Knife of the Galadhrim" no longer freezes the game if in hand.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -8,6 +8,7 @@ previously assigned minion towards the Defender rule.
 - "Terrible and Evil" should be now wounding minions correctly.
 - "Linnar" should allow to heal characters, only if a fierce skirmish is won.
 - "Morgul Blade" should now correctly allow to transfer Blade Tip from discard.
+- "Knife of the Galadhrim" no longer freezes the game if in hand.
 
 <b>21 Nov. 2011</b>
 - "Fifth Level" has now a Fortification keyword.
