--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>23 Nov. 2011</b>
+- "Jarnsmid" now modifies the twilight cost of the itmes by -1, rather than +1.
+
 <b>22 Nov. 2011</b>
 - If a FP character had already some minion assigned, when FP player assigns minion, that character now counts the
 previously assigned minion towards the Defender rule.
