- "Sneaking!" now sums the minions vitality to check if it should cancel the skirmish, or heal him.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>23 Nov. 2011</b>
 - "Jarnsmid" now modifies the twilight cost of the itmes by -1, rather than +1.
 - "Phial of Galadriel" now requires to exert an Elf when it's played.
+- "Sneaking!" now sums the minions vitality to check if it should cancel the skirmish, or heal him.
 
 <b>22 Nov. 2011</b>
 - If a FP character had already some minion assigned, when FP player assigns minion, that character now counts the
