--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,8 @@
 - "Jarnsmid" now modifies the twilight cost of the itmes by -1, rather than +1.
 - "Phial of Galadriel" now requires to exert an Elf when it's played.
 - "Sneaking!" now sums the minions vitality to check if it should cancel the skirmish, or heal him.
+- Versions of "Sam" that can become Ring-bearers when "Frodo" is killed now should be able to pick up the Ring correctly
+when Frodo dies from having 0 Vitality.
 
 <b>22 Nov. 2011</b>
 - If a FP character had already some minion assigned, when FP player assigns minion, that character now counts the
