--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -5,6 +5,7 @@
 - "Sneaking!" now sums the minions vitality to check if it should cancel the skirmish, or heal him.
 - Versions of "Sam" that can become Ring-bearers when "Frodo" is killed now should be able to pick up the Ring correctly
 when Frodo dies from having 0 Vitality.
+- Unique cards will have now "dot" in front of their names in chat log and other places. 
 
 <b>22 Nov. 2011</b>
 - If a FP character had already some minion assigned, when FP player assigns minion, that character now counts the
