--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -8,6 +8,7 @@ when Frodo dies from having 0 Vitality.
 - Unique cards will have now "dot" in front of their names in chat log and other places.
 - "Preparations" stacks card from discard now, rather than from hand.
 - "Sent Back" now allows to play Wizard as well.
+- "Gandalf, Manager of Wizards" now puts 3 cards from hand on top of deck in case of both players.
 
 <b>22 Nov. 2011</b>
 - If a FP character had already some minion assigned, when FP player assigns minion, that character now counts the
