--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -9,6 +9,7 @@ when Frodo dies from having 0 Vitality.
 - "Preparations" stacks card from discard now, rather than from hand.
 - "Sent Back" now allows to play Wizard as well.
 - "Gandalf, Manager of Wizards" now puts 3 cards from hand on top of deck in case of both players.
+- "Treebeard, KotW" Requires now to spot 3 GANDALF Companions, rather than only 2.
 
 <b>22 Nov. 2011</b>
 - If a FP character had already some minion assigned, when FP player assigns minion, that character now counts the
