--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>24 Nov. 2011</b>
+- "Arrow From the South" - trying to fix it. Maybe time it will be right.
+
 <b>23 Nov. 2011</b>
 - "Jarnsmid" now modifies the twilight cost of the itmes by -1, rather than +1.
 - "Phial of Galadriel" now requires to exert an Elf when it's played.
