--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>24 Nov. 2011</b>
 - "Arrow From the South" - trying to fix it. Maybe this time it will be right.
+- "Saved From the Fire" now allows to take only cards of the companions chosen culture into hand from deck and only one
+at a time (because of the Rule of 4 rule).
 
 <b>23 Nov. 2011</b>
 - "Jarnsmid" now modifies the twilight cost of the itmes by -1, rather than +1.
