--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - "Arrow From the South" - trying to fix it. Maybe this time it will be right.
 - "Saved From the Fire" now allows to take only cards of the companions chosen culture into hand from deck and only one
 at a time (because of the Rule of 4 rule).
+- "It's Mine" should now correctly return the card from discard to hand if it's WRAITH of GOLLUM culture.
 
 <b>23 Nov. 2011</b>
 - "Jarnsmid" now modifies the twilight cost of the itmes by -1, rather than +1.
