--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -4,6 +4,7 @@
 - "Saved From the Fire" now allows to take only cards of the companions chosen culture into hand from deck and only one
 at a time (because of the Rule of 4 rule).
 - "It's Mine" should now correctly return the card from discard to hand if it's WRAITH of GOLLUM culture.
+- "Ring of Asperity" can now wound an unwounded companion when played.
 
 <b>23 Nov. 2011</b>
 - "Jarnsmid" now modifies the twilight cost of the itmes by -1, rather than +1.
