--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -5,6 +5,8 @@
 at a time (because of the Rule of 4 rule).
 - "It's Mine" should now correctly return the card from discard to hand if it's WRAITH of GOLLUM culture.
 - "Ring of Asperity" can now wound an unwounded companion when played.
+- "What Are We Waiting For?" should now correctly skip Shadow phase, if such option is chosen.
+- If there is a choice of number involved of 0-1 range (i.e. one token on "Grond"), it will be now possible to choose 1.
 
 <b>23 Nov. 2011</b>
 - "Jarnsmid" now modifies the twilight cost of the itmes by -1, rather than +1.
