- "Gandalf, Manager of Wizards" should now discard 3 cards from Shadow player hand to prevent the effect (if chosen).

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -8,6 +8,7 @@ at a time (because of the Rule of 4 rule).
 - "What Are We Waiting For?" should now correctly skip Shadow phase, if such option is chosen.
 - If there is a choice of number involved of 0-1 range (i.e. one token on "Grond"), it will be now possible to choose 1.
 - "Shire Countryside" should only trigger when it's the FP player that removes the token.
+- "Gandalf, Manager of Wizards" should now discard 3 cards from Shadow player hand to prevent the effect (if chosen).
 
 <b>23 Nov. 2011</b>
 - "Jarnsmid" now modifies the twilight cost of the itmes by -1, rather than +1.
