--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -9,6 +9,7 @@ at a time (because of the Rule of 4 rule).
 - If there is a choice of number involved of 0-1 range (i.e. one token on "Grond"), it will be now possible to choose 1.
 - "Shire Countryside" should only trigger when it's the FP player that removes the token.
 - "Gandalf, Manager of Wizards" should now discard 3 cards from Shadow player hand to prevent the effect (if chosen).
+- "...put character in dead pile..." now is equivalent to "kill".
 
 <b>23 Nov. 2011</b>
 - "Jarnsmid" now modifies the twilight cost of the itmes by -1, rather than +1.
