--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>25 Nov. 2011</b>
+- "There and Back Again" can be played only on Hobbit companions now.
+
 <b>24 Nov. 2011</b>
 - "Arrow From the South" - trying to fix it. Maybe this time it will be right.
 - "Saved From the Fire" now allows to take only cards of the companions chosen culture into hand from deck and only one
