--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>25 Nov. 2011</b>
 - "There and Back Again" can be played only on Hobbit companions now.
 - Added Besieger and Corsair keywords to deckbuilder.
+- "War Towers" now correctly counts companions over 4.
 
 <b>24 Nov. 2011</b>
 - "Arrow From the South" - trying to fix it. Maybe this time it will be right.
