- "Dark Places" now correctly is able to replace site if a proper one is found.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - "There and Back Again" can be played only on Hobbit companions now.
 - Added Besieger and Corsair keywords to deckbuilder.
 - "War Towers" now correctly counts companions over 4.
+- "Dark Places" now correctly is able to replace site if a proper one is found.
 
 <b>24 Nov. 2011</b>
 - "Arrow From the South" - trying to fix it. Maybe this time it will be right.
