--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -4,6 +4,7 @@
 - Added Besieger and Corsair keywords to deckbuilder.
 - "War Towers" now correctly counts companions over 4.
 - "Dark Places" now correctly is able to replace site if a proper one is found.
+- "Asfaloth, Elven Steed" now correctly exerts Arwen when used.
 
 <b>24 Nov. 2011</b>
 - "Arrow From the South" - trying to fix it. Maybe this time it will be right.
