- "Rallying Call" now removes (1) when used.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>26 Nov. 2011</b>
+- "Rallying Call" now removes (1) when used.
+
 <b>25 Nov. 2011</b>
 - "There and Back Again" can be played only on Hobbit companions now.
 - Added Besieger and Corsair keywords to deckbuilder.
