--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>27 Nov. 2011</b>
+- Characters should not die between turns.
+
 <b>26 Nov. 2011</b>
 - "Rallying Call" now removes (1) when used.
 
