--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>27 Nov. 2011</b>
 - Characters should not die between turns.
+- "Great Hill Troll" site number is 5 now.
 
 <b>26 Nov. 2011</b>
 - "Rallying Call" now removes (1) when used.
