--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - Characters should not die between turns.
 - "Great Hill Troll" site number is 5 now.
 - "Radagast" adds move limit for the remainder of the turn, when it was in play.
+- "Gorgoroth Sapper" is now a Besieger.
 
 <b>26 Nov. 2011</b>
 - "Rallying Call" now removes (1) when used.
