--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>30 Nov. 2011</b>
+- When instructed to choose a card to heal/wound X times, a card with vitality/wounds &lt;X can be chosen, as long as
+that character can be healed/wounded by the card at least once.
+
 <b>27 Nov. 2011</b>
 - Characters should not die between turns.
 - "Great Hill Troll" site number is 5 now.
