--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>30 Nov. 2011</b>
 - When instructed to choose a card to heal/wound X times, a card with vitality/wounds &lt;X can be chosen, as long as
 that character can be healed/wounded by the card at least once.
+- "Narya" from Reflections now has a twilight cost of 0.
 
 <b>27 Nov. 2011</b>
 - Characters should not die between turns.
