--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - When instructed to choose a card to heal/wound X times, a card with vitality/wounds &lt;X can be chosen, as long as
 that character can be healed/wounded by the card at least once.
 - "Narya" from Reflections now has a twilight cost of 0.
+- Game history now includes also name of the format the game was played in, as well as your deck name you used in it.
 
 <b>27 Nov. 2011</b>
 - Characters should not die between turns.
