--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -4,6 +4,7 @@
 that character can be healed/wounded by the card at least once.
 - "Narya" from Reflections now has a twilight cost of 0.
 - Game history now includes also name of the format the game was played in, as well as your deck name you used in it.
+- Win/lose skirmish triggers should be working now correctly.
 
 <b>27 Nov. 2011</b>
 - Characters should not die between turns.
