--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,9 @@
 <pre style="font-size:80%">
+<b>2 Dec. 2011</b>
+- When you reload the game page or you enter an ongoing game you will see last events in the game in the chat screen.
+- Increased the chat timeout to 30 seconds for in-game channels to make it less possible to lose connection due to
+connectivity problem.
+
 <b>30 Nov. 2011</b>
 - When instructed to choose a card to heal/wound X times, a card with vitality/wounds &lt;X can be chosen, as long as
 that character can be healed/wounded by the card at least once.
