--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -4,6 +4,7 @@
 - Increased the chat timeout to 30 seconds for in-game channels to make it less possible to lose connection due to
 connectivity problem.
 - "Corsair Lookout" now puts the RAIDER tokens on the selected card, rather than on itself.
+- The dialogs open during game no longer will have their buttons focused, so no accidental actions will be possible.
 
 <b>30 Nov. 2011</b>
 - When instructed to choose a card to heal/wound X times, a card with vitality/wounds &lt;X can be chosen, as long as
