- "Desert Sneak", "Desert Scout" and "Desert Runner" now correctly allow to wound the character they were assiged to by FP player.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -5,6 +5,8 @@
 connectivity problem.
 - "Corsair Lookout" now puts the RAIDER tokens on the selected card, rather than on itself.
 - The dialogs open during game no longer will have their buttons focused, so no accidental actions will be possible.
+- "Desert Sneak", "Desert Scout" and "Desert Runner" now correctly allow to wound the character they were assiged to by
+FP player.
 
 <b>30 Nov. 2011</b>
 - When instructed to choose a card to heal/wound X times, a card with vitality/wounds &lt;X can be chosen, as long as
