- "Itilien Wilderness" now correctly adds +2 Strength to selected card.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -8,6 +8,7 @@ connectivity problem.
 - "Desert Sneak", "Desert Scout" and "Desert Runner" now correctly allow to wound the character they were assiged to by
 FP player.
 - "Radagast" should now correctly add Move Limit whenever he has to (when it's played or at the start of the turn).
+- "Itilien Wilderness" now correctly adds +2 Strength to selected card.
 
 <b>30 Nov. 2011</b>
 - When instructed to choose a card to heal/wound X times, a card with vitality/wounds &lt;X can be chosen, as long as
