--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>3 Dec. 2011</b>
+- "Fifth Level" can now be transferred to a minion.
+
 <b>2 Dec. 2011</b>
 - When you reload the game page or you enter an ongoing game you will see last events in the game in the chat screen.
 - Increased the chat timeout to 30 seconds for in-game channels to make it less possible to lose connection due to
