--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>3 Dec. 2011</b>
 - "Fifth Level" can now be transferred to a minion.
+- "Thundering Host" now works only on mounted characters.
 
 <b>2 Dec. 2011</b>
 - When you reload the game page or you enter an ongoing game you will see last events in the game in the chat screen.
