--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>4 Dec. 2011</b>
+- The One Ring(s) no longer prevent the wound, so will work on Steward's Tomb.
+
 <b>3 Dec. 2011</b>
 - "Fifth Level" can now be transferred to a minion.
 - "Thundering Host" now works only on mounted characters.
