--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>5 Dec. 2011</b>
+- "Wisp of Pale Sheen" has now a Twilight keyword.
+
 <b>4 Dec. 2011</b>
 - The One Ring(s) no longer prevent the wound, so will work on Steward's Tomb.
 
