- "Morgul Brute" and "Morgul Destroyer" optional "play" triggers now cannot be prevented by choosing to wound the Ring-bearer if the Ring-bearer cannot take a wound.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>5 Dec. 2011</b>
 - "Wisp of Pale Sheen" has now a Twilight keyword.
+- "Morgul Brute" and "Morgul Destroyer" optional "play" triggers now cannot be prevented by choosing to wound the
+Ring-bearer if the Ring-bearer cannot take a wound.
 
 <b>4 Dec. 2011</b>
 - The One Ring(s) no longer prevent the wound, so will work on Steward's Tomb.
