--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>6 Dec. 2011</b>
+- "The Witch-king" from RotK can now bear "The Pale Blade".
+
 <b>5 Dec. 2011</b>
 - "Wisp of Pale Sheen" has now a Twilight keyword.
 - "Morgul Brute" and "Morgul Destroyer" optional "play" triggers now cannot be prevented by choosing to wound the
