Update of game manual.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/instruction.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/instruction.html
@@ -1,6 +1,6 @@
 <h1>Manual</h1>
 
-<p><i>Courtesy of Drachu84</i></p>
+<p><i>Courtesy of Drachu84 (with further changes by MarcinS)</i></p>
 
 <p>GEMP-Lotr is an automatic game client for the Lord of the Rings Tradable Card Game. Below you will
     find basic information about using it.</p>
@@ -13,23 +13,44 @@
     </li>
 
     <li><b>Building The Deck</b><br/>
-        Making a deck is very easy. In the Game Hall you will find Edit Deck button. Simply click it and
-        the deck builder will open. It is divided into three parts. In the left one, you can choose Ring
-        Bearer, The One Ring and Sites. To the right side you can find card sets, from which cards are
-        added to the deck. By clicking on the culture icon, cards from the selected ones will appear.
-        To reset, simply click again on the icon. Middle part is what actually your deck consists of. It
-        is divided into two sections, Free Peoples and Shadow.<br/>
-        Gemp has built-in validator, which counts Free Peoples/Shadow cards and checks if the deck
-        is valid for selected format.
+        Making a deck is very easy. In the Game Hall you will find "Deck Builder" button. Simply click it and
+        the deck builder will open. At the very top of the screen you will buttons and other controlls that allow you
+        to manage your deck(s). You can create a new deck, save or rename currently edited one, or open an existing
+        deck.<br/>
+        The rest of the screen is divided into three parts. In the left one, you can choose Ring
+        Bearer, The One Ring and Sites. To the right side you can find cards which could be added to your deck. Middle
+        part is what actually your deck consists of.<br/>
+        The right hand side allows you to filter the available cards by various criteria - set, name, culture, etc.
+        You can select multiple criteria and all cards matching these will be displayed below. If there is more cards
+        matching that could be displayed at one time, a next (and previous) page button above will allow you to browse
+        other pages. Between the next and previous button you will find slider that allows to adjust the number of cards
+        displayed on each page.<br/>
+        The displayed card size makes it very difficult to read the card text, therefore you can zoom in on the card by
+        pressing Shift+click on the card. The same option is available without any keyboard interaction by dragging the
+        card
+        in the "up" direction (press left mouse button on the card then without releasing the mouse button move your
+        mouse up/forward,
+        then release the mouse button). Once you're done with viewing the zoomed card, just click anywhere on the
+        screen.<br/>
+        Once you find a card you wish to add to your deck, just left-click it to move the card to your deck - in the
+        center part of
+        the screen. If you wish to remove a card from your deck, just left-click it. Your deck is split into two parts,
+        one for each
+        side - free people and shadow.<br/>
+        Underneath the deck you will find information about the deck you're building/viewing - number of shadow and free
+        people cards
+        and if the deck is valid in supported formats. If the deck is not valid in some format, the information why it's
+        not valid is available.
     </li>
 
     <li><b>Setting up game</b><br/>
-        Once you have created the deck, you can host/join games. Simply again, click on Create Table
-        and the game is ready. It will start automatically when someone will join it.<br/>
-        To join game click Join Table button in the selected green square (which represents table)
-        I strongly recommend to check both options in the Settings tab (i. e. auto-pass when there
-        is no action and auto-accept after selecting action or card) - game will speed up and will be
-        smoother for both players.
+        Once you have created the deck, you can start playing. You can create a new game by clicking on Create Table
+        or join an existing table by clicking on Join Table. Each table displays the format the player wants to play,
+        also when you create a table you have to select the format you wish to play from the first drop-down. When you
+        create
+        or join an existing table, you have to choose your deck from the second drop-down.<br/>
+        Once there are two people at the table (one created the table, and one joined it) the game starts. Once the game
+        starts other people might go over and view your game by clicking on Watch Game button.
     </li>
 
     <li><b>Playing game</b><br/>
@@ -37,9 +58,13 @@
         number of burdens to determine who goes first. If you win it, a window with choose a seat
         number at the table will pop-up. Number 1 means that you want to go first, number 2 that
         opponent will and so on.<br/>
-        Next step is choosing your starting fellowship. Select characters by clicking on them for the
-        total twilight cost up to 4 (selected character is the one with a blue frame on it). Select one,
-        click Done and select another one (if able).<br/>
+        Depending on a format the first player might be asked to select first site, and both players might be asked
+        to choose to mulligan or not (mulligan - shuffle your first hand of 8 cards back into deck and draw 6 cards).
+        The mulligan option can be used only once per player in a game and only once, just after the first hand of 8
+        cards is drawn.<br/>
+        You need to choose your starting fellowship during each game. Select characters one by one by clicking on them
+        for the
+        total twilight cost up to 4 (selected character is the one with a blue frame on it).<br/>
         Time to play some cards! On the bottom part of the game you can find your starting hand.
         Click one time on the card to play it. Gemp automatically adds twilight points and triggers
         actions which are not optional (for example, playing A Wizard is never late will automatically
@@ -51,7 +76,39 @@
         game.<br/>
         Below the frame with turn sequence there is a smaller one where you will find what
         you currently can do. In most cases cards eligible to play at the current moment will be
-        highlighted. If you don’t want to do anything, click Pass and the next step will commence.
+        highlighted. If you don’t want to do anything, click Pass and the next step will commence.<br/>
+        The Settings tab allows you to change some basic settings of the game - whether to automatically pass if no
+        phase
+        actions are available to you or not, and also if each card/action selection has to be confirmed or not. It's
+        highly
+        recommended to de-select this checkbox if you're playing on touch-screen devices (phone/tablets) to prevent
+        accidental
+        card selection.
+    </li>
+
+    <li><b>Card stats</b><br/>
+        Each character in game displays its current (or from time when it was last active) strength, vitality and the
+        third stat (site number or resistance).
+        If a character with base strength of 6 bears a weapon that gives +2 strength, the character will display 8 in
+        its
+        strength box. Please keep in mind that the weapon attached to it will also display the +2 bonus on it, but it
+        should
+        not be further added to the character strength, as the bonus is already applied. The same goes for every other
+        bonus/penalty in the game and each stat.
+    </li>
+
+    <li><b>Player stats</b><br/>
+        Next to the Adventure Path in game you can see each player name. To the right of the name you can find
+        "chess-clock" for that player.
+        This time measures time it took for that player to make decisions in game (like in chess). If the time for the
+        player runs out, that
+        player automatically concedes the game (loses). Directly below the player name you will see 3 icons with
+        numbers, these represent: deck size,
+        hand size and number of threats that player has. Also next to them you will see an extra button with a plus (+)
+        sign, that allows you
+        to get extra data about that player's discard pile and dead pile sizes.<br/>
+        You can browse your own or opponent's dead pile by clicking on the icon. You can do the same with your discard
+        pile (but not your opponent's).
     </li>
 
     <li><b>Skirmish</b><br/>
@@ -66,14 +123,16 @@
         Next step is skirmish. Click on the character which you want to fight first. When that skirmish
         is complete, select another one and so on. Skirmish events, special abilities, etc. which are
         playable will be highlighted during every fight. If you don’t want to play any, click Pass.
-        If such are not available, Gemp will do it automatically. After all skirmishes are resolved
-        (including fierce ones) game will proceed to next stage (Regroup)
+        After all skirmishes are resolved (including fierce ones) game will proceed to next stage (Regroup or Assignment
+        if there are any Fierce minions);)
     </li>
 
     <li><b>The Iron rule</b><br/>
-        There is no rolling back, simple as that. You can’t cancel action that already happen, even if
+        There is no rolling back, simple as that. You can’t undo an action that already happen, even if
         opponent will agree. If you played cards you didn’t want to, assigned wrong or didn’t trigger
-        optional action it’s done and can’t be reversed.
+        optional action it’s done and can’t be reversed. If you do mistakes like that often, you might consider
+        unchecking
+        the "Auto-accept after selecting action or card" checkbox in Settings tab.
     </li>
 
     <li><b>Useful Stuff</b><br/>
