--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>7 Dec. 2011</b>
 - "Desert Lancers" now correctly costs 5 twilight.
 - "Brooding on Tomorrow" is now unique.
+- "Still Far Ahead" should be working correctly now.
 
 <b>6 Dec. 2011</b>
 - "The Witch-king" from RotK can now bear "The Pale Blade".
