- "Ghastly Host" should allow you to play Nazguls now.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>9 Dec. 2011</b>
+- "Ghastly Host" should allow you to play Nazguls now.
+
 <b>7 Dec. 2011</b>
 - "Desert Lancers" now correctly costs 5 twilight.
 - "Brooding on Tomorrow" is now unique.
