- Orcs from Ents of Fangorn now make the Free People player to choose which companions to wound.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>11 Dec. 2011</b>
 - Added leagues
 - Tokens and stacked cards are displayed now in zoomed view.
+- Orcs from Ents of Fangorn now make the Free People player to choose which companions to wound.
 
 <b>9 Dec. 2011</b>
 - "Ghastly Host" should allow you to play Nazguls now.
