- Added "Black Rider" - set 12.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>14 Dec. 2011</b>
+- Added "Black Rider" - set 12.
+
 <b>13 Dec. 2011</b>
 - "Saruman's Snows" works only on the site it is attached to.
 - Added games played count to league standings.
