- "Legolas Bow" now correctly allows to heal when Legolas bearing it is exerted to play an event or condition.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>15 Dec. 2011</b>
+- "Legolas Bow" now correctly allows to heal when Legolas bearing it is exerted to play an event or condition.
+
 <b>14 Dec. 2011</b>
 - Added "Black Rider" - set 12.
 - "Skinbark" now exerts itself, rather than discards.
