- "One Good Turn Deserves Another" plays next site now, instead of replacing current one.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - "Legolas Bow" now correctly allows to heal when Legolas bearing it is exerted to play an event or condition.
 - Many old cards that were playing cards from discard, no longer can do that if there is an effect preventing playing
 cards from discard.
+- "One Good Turn Deserves Another" plays next site now, instead of replacing current one.
 
 <b>14 Dec. 2011</b>
 - Added "Black Rider" - set 12.
