- Added card reordering during game. Players can now reorder cards in play (except for Adventure path, duh!).

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -8,6 +8,7 @@ cards from discard.
 - Automatically handling multiple triggers from the same card(s) - i.e. Goblin Armory, etc.
 - "Dark Powers Strengthen" now has Toil 2 (didn't have before).
 - "Scurrying Goblin" adds 2 twilight only on Underground site now.
+- Added card reordering during game. Players can now reorder cards in play (except for Adventure path, duh!).
 
 <b>14 Dec. 2011</b>
 - Added "Black Rider" - set 12.
