--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -266,7 +266,7 @@ against Nazgul.
 - Frodo and Sam are always Ring-bound (according to rules).
 - "Resistance Becomes Unbearable" can be now played in Maneuver phase, as it's supposed to.
 - Fixed playing site via a card effect.
-- "Ulaire Enquea" from Mines of Moria now correctly exerts itself when using the triggered ability.
+- "Úlairë Enquëa" from Mines of Moria now correctly exerts itself when using the triggered ability.
 - "Hillman Tribe" now correctly tries to spot DUNLAND minion, rather than DUNLAND Man when trying to take control of
 a site.
 - "Saruman, Rabble Rouser" now properly exerts itself for the ability.
@@ -335,7 +335,7 @@ twilight cost, instead of just making it cheaper to play.
 
 <b>14 Oct. 2011</b>
 - Uruviel and all other copying site allies should now correctly have modifiers off sites
-- Ulaire Nertea now actually allows to play minions from discard
+- Úlairë Nertëa now actually allows to play minions from discard
 - Goblin Armory no longer highlights in hand if an Orc takes damage
 
 <b>13 Oct. 2011</b>
