- "Chamber of Mazarbul" now has an Underground keyword.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>19 Dec. 2011</b>
+- "Chamber of Mazarbul" now has an Underground keyword.
+
 <b>15 Dec. 2011</b>
 - "Legolas Bow" now correctly allows to heal when Legolas bearing it is exerted to play an event or condition.
 - Many old cards that were playing cards from discard, no longer can do that if there is an effect preventing playing
