- "Valley of the Silverlode" should not correctly allow to heal every Hobbit companion.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>22 Dec. 2011</b>
+- "Valley of the Silverlode" should not correctly allow to heal every Hobbit companion.
+
 <b>19 Dec. 2011</b>
 - "Chamber of Mazarbul" now has an Underground keyword.
 - "Moving This Way" now reveals the Nazgul before putting it on bottom of deck.
