- "Orc Banner" should now correctly trigger and give bonuses.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>22 Dec. 2011</b>
 - "Valley of the Silverlode" should not correctly allow to heal every Hobbit companion.
 - "Sneaking!" will now correctly heal Smeagol, if it's skirmishing a minion(s) of higher or equal vitality.
+- "Orc Banner" should now correctly trigger and give bonuses.
 
 <b>19 Dec. 2011</b>
 - "Chamber of Mazarbul" now has an Underground keyword.
