- "Wizard Storm" should now work when fellowship moves from the site it's attached to.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>26 Dec. 2011</b>
+- "Wizard Storm" should now work when fellowship moves from the site it's attached to.
+
 <b>22 Dec. 2011</b>
 - "Valley of the Silverlode" should not correctly allow to heal every Hobbit companion.
 - "Sneaking!" will now correctly heal Smeagol, if it's skirmishing a minion(s) of higher or equal vitality.
